cabal-version: 3.4


name:               profilers
version:            0.0.0.1
author:             Kovalev Dmitry
maintainer:         https://github.com/KovalevDima
description:        Development-related code
homepage:           https://github.com/KovalevDima/ClickHaskell/dev#readme
bug-reports:        https://github.com/KovalevDima/ClickHaskell/issues
License:            BSD-3-Clause
License-File:       ./LICENSE
copyright:          2023 Kovalev Dmitry
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/KovalevDima/ClickHaskell
  subdir: dev

Flag dev
  Description: Dump core
  Manual: True
  Default: False

executable profiler
  main-is: Profiler.hs
  hs-source-dirs: ./
  ghc-options:
    -O2
    -threaded
    -main-is Profiler

  ghc-prof-options:
    -fprof-late
    -rtsopts "-with-rtsopts=-s -A32m -AL256m -p -hy -L250 -l-agu -N1"

  if flag(dev)
    ghc-options: 
      -ddump-to-file
      -ddump-simpl
      -dsuppress-type-applications
      -dsuppress-coercions
      -dsuppress-idinfo
      -dsuppress-type-signatures
      -dsuppress-var-kinds
      -dsuppress-module-prefixes
      -dsuppress-uniques

  build-depends:
    -- Internal
      ClickHaskell
    , ClickHaskell-http-client

    -- GHC included
    , base
    , bytestring
    , stm

    -- External
    , http-client

executable profiler2
  main-is: ProfilerV2.hs
  hs-source-dirs: ./
  ghc-options:
    -O2
    -threaded
    -main-is ProfilerV2

  ghc-prof-options:
    -fprof-late
    -rtsopts "-with-rtsopts=-s -A32m -AL256m -p -hy -L250 -l-agu -N1"

  if flag(dev)
    ghc-options:
      -ddump-to-file
      -ddump-simpl
      -dsuppress-type-applications
      -dsuppress-coercions
      -dsuppress-idinfo
      -dsuppress-type-signatures
      -dsuppress-var-kinds
      -dsuppress-module-prefixes
      -dsuppress-uniques

  build-depends:
    -- Internal
      ClickHaskell

    -- GHC included
    , base
    , bytestring
    , stm
    , time
    , template-haskell

    -- External
    , http-client
