cabal-version: 3.4


name:               tests
version:            0.0.0.1
author:             Kovalev Dmitry
maintainer:         https://github.com/KovalevDima
description:        Tests runner
homepage:           https://github.com/KovalevDima/ClickHaskell/testing#readme
bug-reports:        https://github.com/KovalevDima/ClickHaskell/issues
License:            BSD-3-Clause
License-File:       ./LICENSE
copyright:          2023 Kovalev Dmitry
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/KovalevDima/ClickHaskell
  subdir: testing

executable tests
  main-is: IntegrationTests.hs
  hs-source-dirs: .
  ghc-options: -O2 -threaded -rtsopts -main-is IntegrationTests
  build-depends:
    -- Internal
      ClickHaskell

    -- GHC included
    , base >=4.7 && <5
    , bytestring

  other-modules:
      Paths_tests
      T1QuerySerialization
      T2WriteReadEquality
  default-language: Haskell2010
