Cabal-version:      3.0

name:               tests
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable tests
  main-is: index.lhs
  hs-source-dirs: .
  ghc-options:
    -O2 -threaded -rtsopts
    -main-is Tests
    -pgmL html2hs -Wall
  build-tool-depends: html2hs:html2hs
  build-depends:
      ClickHaskell
    , async
    , base >=4.7 && <5
    , bytestring
  other-modules:
    T1QuerySerialization
    T2WriteReadEquality
    T3Multithreading
    T4MissmatchErrors
  default-language: Haskell2010
