Cabal-version:      3.4


name:               usage
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

-- * API

executable insertInto
  default-language: GHC2021
  main-is: insertInto.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
    , bytestring
  ghc-options:
    -pgmL markdown-unlit
    -main-is Writing
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit

executable selectFromView
  default-language: GHC2021
  main-is: selectFromView.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
  ghc-options:
    -pgmL markdown-unlit
    -main-is ReadingView
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit
