Cabal-version:      3.0
name:               documentation
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable documentation-compiler
  default-language: GHC2021
  hs-source-dirs: .
  main-is: index.lhs
  build-depends:
      base
    , hakyll
    , filepath
  ghc-options:
    -threaded -Wall
    -main-is DocumentationCompiler
    -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
