Cabal-version:      3.0
name:               server
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable server
  default-language: Haskell2010
  main-is: index.hs
  build-depends:
      ClickHaskell
    , ClickHaskell-eventlog-writer
    , ClickHaskell-rts-stats
    , ClickHaskell-visits
    , aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , directory
    , eventlog-socket
    , filepath
    , http-types
    , ip
    , unordered-containers
    , mime-types
    , network
    , text
    , time
    , stm
    , wai
    , warp
    , wai-websockets
    , websockets
  ghc-options: -threaded -Wall -Wunused-packages -rtsopts "-with-rtsopts=-T -A8m -AL32m -N"
