Cabal-version:      3.0

name:               usage
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable usage
  default-language: Haskell2010
  default-extensions:
    DeriveGeneric,
    FlexibleInstances,
    MultiParamTypeClasses,
    NumericUnderscores,
    TypeApplications,
    StandaloneDeriving
  main-is: index.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
    , bytestring
  ghc-options: -pgmL html2hs -Wall
  build-tool-depends: html2hs:html2hs
