Cabal-version:      3.0
name:               ClickHaskell-eventlog-writer
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable eventlog-agent
  main-is: eventlog-agent.hs
  default-language: Haskell2010
  build-depends:
      ClickHaskell
    , async
    , base >=4.7 && <5
    , bytestring
    , time
    , text
    , network
    , stm
    , ghc-events
  ghc-options:
    -Wall
    -Wunused-packages
